Opened 12 years ago

Closed 10 years ago

#4009 closed defect (fixed)

aiffenc qcelp remux: invalid output

Reported by: ami_stuff Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: aif
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

C:\>ffmpeg -i purevoice.aif -acodec copy out.aif
ffmpeg version N-66438-g4f4f08e Copyright (c) 2000-2014 the FFmpeg developers
  built on Sep 24 2014 22:26:49 with gcc 4.9.1 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      54.  7.101 / 54.  7.101
  libavcodec     56.  1.101 / 56.  1.101
  libavformat    56.  5.100 / 56.  5.100
  libavdevice    56.  1.100 / 56.  1.100
  libavfilter     5.  1.102 /  5.  1.102
  libswscale      3.  1.100 /  3.  1.100
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  1.100 / 53.  1.100
Input #0, aiff, from 'purevoice.aif':
  Duration: 00:00:12.61, start: 0.000000, bitrate: 77 kb/s
    Stream #0:0: Audio: qcelp (Qclp / 0x706C6351), 44100 Hz, mono, flt, 77 kb/s
Output #0, aiff, to 'out.aif':
  Metadata:
    encoder         : Lavf56.5.100
    Stream #0:0: Audio: qcelp (Qclp / 0x706C6351), 44100 Hz, mono, 77 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
Press [q] to stop, [?] for help
size=     119kB time=00:00:12.61 bitrate=  77.2kbits/s
video:0kB audio:119kB subtitle:0kB other streams:0kB global headers:0kB muxing o
verhead: 0.059986%
C:\>ffmpeg -i out.aif
ffmpeg version N-66438-g4f4f08e Copyright (c) 2000-2014 the FFmpeg developers
  built on Sep 24 2014 22:26:49 with gcc 4.9.1 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      54.  7.101 / 54.  7.101
  libavcodec     56.  1.101 / 56.  1.101
  libavformat    56.  5.100 / 56.  5.100
  libavdevice    56.  1.100 / 56.  1.100
  libavfilter     5.  1.102 /  5.  1.102
  libswscale      3.  1.100 /  3.  1.100
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  1.100 / 53.  1.100
[aiff @ 02e4e760] could not find COMM tag or invalid block_align value
out.aif: Operation not permitted

Attachments (1)

purevoice.aif (119.0 KB ) - added by ami_stuff 12 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 12 years ago

Attachment: purevoice.aif added

comment:1 by ami_stuff, 10 years ago

the output file seems to play fine with qt

comment:2 by Carl Eugen Hoyos, 10 years ago

Component: undeterminedavformat
Keywords: aif added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:3 by Carl Eugen Hoyos, 10 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.