lavf/aiffenc: Write extradata also for qcelp.

Fixes ticket #4009.